--- a/configure/playbooks/roles/nginx/handlers/main.yml
+++ b/configure/playbooks/roles/nginx/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: Restart nginx
+- name: restart nginx
   ansible.builtin.service:
     name: nginx
     state: restarted
 
-- name: Reload nginx
+- name: reload nginx
   ansible.builtin.service:
     name: nginx
     state: reloaded
