--- a/configure/playbooks/install_container_service.yml
+++ b/configure/playbooks/install_container_service.yml
@@ -7,7 +7,7 @@
   tasks:
     - name: Check if we're running on RedHat 7
       ansible.builtin.set_fact:
-        os_is_redhat_7: ansible_facts['os_family'] == "RedHat" and ansible_facts['distribution_major_version'] is version('7')
+        os_is_redhat_7: "{{ ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] is version('7') }}"
 
 - name: Provision container service host
   hosts: cserv_hosts
