Add postgresql_install variables to 'all' group
We need to install postgres on both the database and web servers

--- a/configure/group_vars/all/vars/postgresql.yml
+++ b/configure/group_vars/all/vars/postgresql.yml
@@ -1,5 +1,7 @@
 ---
-# XNAT plugins require PostgreSQL 9.4 or later
+# XNAT supports PostgreSQL 10 - 14
+# See: https://groups.google.com/g/xnat_discussion/c/INKizGBktEQ/m/jauYgo8oAAAJ
+#postgresql_version: "14"  # for pg 14, in pg_hba.conf clientcert=1 should be clientcert=verify-full
 postgresql_version: "12"
 
 # Generally this should be set to true
@@ -12,3 +14,9 @@ database_client_certificate_cache_filename: "{{ ansible_cache_dir }}/pg_certific
 # For installing postgres
 postgresql_rpm_gpg_key_pgdg: "https://www.postgresql.org/download/keys/RPM-GPG-KEY-PGDG"
 
+# mirsg.postgresql - download and install - we need to do this on both the web server and the db
+postgresql_install:
+  disable_gpg_check: false
+  rpm: "https://download.postgresql.org/pub/repos/yum/reporpms/EL-{{ ansible_facts['distribution_major_version'] }}-x86_64/pgdg-redhat-repo-latest.noarch.rpm"
+  yum_package: "postgresql{{ postgresql_version }}-server"
+  yum_contrib_package: "postgresql{{ postgresql_version }}-contrib" # required only on CentOS 7
