--- a/configure/playbooks/roles/provision/tasks/locale.yml
+++ b/configure/playbooks/roles/provision/tasks/locale.yml
@@ -1,5 +1,5 @@
 ---
-- name: check if locale already set
+- name: Check if locale already set
   ansible.builtin.shell: |
     set -o pipefail
     localectl status | grep -i {{ server_locale | quote }}
@@ -7,6 +7,26 @@
   changed_when: false
   failed_when: false
 
-- name: set locale
+- name: Install locale for RedHat 7
+  when: ansible_facts['os_family'] == "RedHat" and ansible_facts['distribution_major_version'] is version('7')
+  block:
+    - name: Allow install of other locals
+      ansible.builtin.lineinfile:
+        path: /etc/yum.conf
+        search_string: "override_install_langs=en_US.utf8"
+        state: absent
+
+    - name: Reinstall locales # noqa: package-latest
+      ansible.builtin.yum:
+        name: glibc-common
+        state: latest
+
+- name: Install locale for RedHat 8
+  ansible.builtin.yum:
+    name: glibc-langpack-en
+    state: present
+  when: ansible_facts['os_family'] == "RedHat" and ansible_facts['distribution_major_version'] is version('7', '>')
+
+- name: Set locale # noqa: no-changed when
   ansible.builtin.command: "localectl set-locale LANG={{ server_locale | quote }}"
   when: found_locale.rc != 0
