--- a/configure/playbooks/roles/provision/tasks/package_update.yml
+++ b/configure/playbooks/roles/provision/tasks/package_update.yml
@@ -29,3 +29,29 @@
   ansible.builtin.yum:
     name: "epel-release"
     state: installed
+
+- name: Disable default Postgres module # noqa command-instead-of-module
+  ansible.builtin.command: yum module disable -y postgresql
+  register: disable_postgresql_module
+  changed_when:
+    - "'Disabling modules:' in disable_postgresql_module.stdout"
+
+#- name: Enable correct version of PostgreSQL on web server # noqa command-instead-of-module
+#  ansible.builtin.command: "yum module enable -y postgresql:{{ postgresql_version }}"
+#  when: "'web' in group_names"
+#  register: enable_postgresql_module
+#  changed_when:
+#    - "'Enabling module streams:' in enable_postgresql_module.stdout"
+
+- name: Install PostgreSQL RPM key
+  ansible.builtin.rpm_key:
+    state: present
+    key: "{{ postgresql_rpm_gpg_key_pgdg }}"
+  when: "'cserv_hosts' not in group_names"  
+
+- name: Ensure postgres RPM is installed on the web server
+  ansible.builtin.yum:
+    name: "{{ postgresql_install.rpm }}"
+    state: present
+    disable_gpg_check: "{{ postgresql_install.disable_gpg_check }}"
+  when: "'web' in group_names"
