Install specific version of the postgresql client

--- a/configure/playbooks/roles/xnat/tasks/main.yml
+++ b/configure/playbooks/roles/xnat/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Ensure dependencies are installed
   ansible.builtin.yum:
-    name: ["postgresql", "wget"]
+    name: ["postgresql{{ postgresql_version }}", "wget"]
     state: installed
 
 - name: "Configure XNAT directories"
