--- a/configure/group_vars/all/vars/python.yml
+++ b/configure/group_vars/all/vars/python.yml
@@ -1,6 +1,5 @@
 ---
-# For Red Hat 8+
-install_python3:
+install_python:
   version: "3"
   pip_version: "21.3.1"
   pip_executable: "pip3"
@@ -8,17 +7,5 @@ install_python3:
     - python3
     - python3-pip
     - python3-setuptools
-  pip_packages:
-    - cryptography
-
-# For Red Hat 7
-install_python2:
-  version: "2"
-  pip_version: "20.3.4"
-  pip_executable: "pip"
-  system_packages:
-    - python
-    - python-pip
-    - python-setuptools
   pip_packages:
     - cryptography
