Add TODO note for SSL certificate

--- a/configure/group_vars/web/vars/postgresql.yml
+++ b/configure/group_vars/web/vars/postgresql.yml
@@ -4,6 +4,7 @@
 postgresql_version: "14"
 
 # Generally this should be set to true
+# TODO: set back to `true` once we have SSL enabled for the database (#38)
 postgresql_use_ssl: false
 
 # Where to store ssl certificates in local cache
