Partly revert "Remove remaining Postgres Ansible configuration"
This partly reverts commit d785e2c0e2d351107e4ff9a98893ec6f284b81e9.

--- a/configure/playbooks/roles/xnat/tasks/main.yml
+++ b/configure/playbooks/roles/xnat/tasks/main.yml
@@ -3,6 +3,11 @@
   ansible.builtin.pip:
     name:
       - lxml
+  
+- name: Ensure dependencies are installed
+  ansible.builtin.yum:
+    name: ["postgresql{{ postgresql_version }}", "wget"]
+    state: installed
 
 - name: "Configure XNAT directories"
   include: directories.yml
