--- a/configure/group_vars/web/vars/postgresql.yml
+++ b/configure/group_vars/web/vars/postgresql.yml
@@ -3,6 +3,9 @@
 # See: https://groups.google.com/g/xnat_discussion/c/INKizGBktEQ/m/jauYgo8oAAAJ
 postgresql_version: "14"
 
+# For installing postgres
+postgresql_rpm_gpg_key_pgdg: "https://www.postgresql.org/download/keys/RPM-GPG-KEY-PGDG"
+
 # mirsg.postgresql - download and install - we need to do this on both the web server and the db
 postgresql_install:
   disable_gpg_check: false
