--- a/configure/group_vars/web/vars/xnat_project.yml
+++ b/configure/group_vars/web/vars/xnat_project.yml
@@ -18,7 +18,8 @@ xnat_project_owner:
   email: "c.xavier@{{ hostvars['xnat_web']['ansible_host'] }}"
 
 xnat_project_data:
-  url: pass  # Where to download the data (zip file) from
-  file: "../../data/ibash.zip"  # Where to store the zip file
+  s3_bucket: "ideas-workshop-datasets"
+  s3_object: "xnat-ibash.zip"
+  file: "../../data/ibash.zip"  # Where to store the zip file loclaly
   directory: "../../data/ibash"  # Where the zip file should be unpacked to
   credentials_file: "../../data/.netrc"  # Where to store credentials for XNATPy
