--- a/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
@@ -1,16 +1,16 @@
 ---
-# Ensure we have project data to upload
-- name: Check if project data exists locally
-  ansible.builtin.stat:
-    path: "{{ xnat_project_data.file }}"
-  register: xnat_project_data_file
-
-- name: Download the data if we do not already have it
-  ansible.builtin.get_url:
-    url: "{{ xnat_project_data.url }}"
+- name: Download the data if we do not have it or if it has changed
+  amazon.aws.s3_object:
+    bucket: "{{ xnat_project_data.s3_bucket }}"
+    object: "{{ xnat_project_data.s3_object }}"
     dest: "{{ xnat_project_data.file }}"
-    mode: "0644"
-  when: not xnat_project_data_file.stat.exists
+    mode: get
+    overwrite: different
+  register: data_downloaded
+
+- name: Unzip the data if it was downloaded
+  ansible.builtin.debug:
+    var: data_downloaded
 
 - name: Check if project data directory exists
   ansible.builtin.stat:
@@ -18,10 +18,10 @@
   register: xnat_project_data_directory
 
 - name: Unzip the data if necessary
-  when: not xnat_project_data_directory.stat.exists
+  when: not xnat_project_data_directory.stat.exists or data_downloaded.changed
   block:
 
-    - name: Create the data directory
+    - name: Ensure the data directory exists
       ansible.builtin.file:
         path: "{{ xnat_project_data.directory }}"
         state: directory
