Add task to upload docker images for use by Container Service

--- a/configure/playbooks/roles/xnat/tasks/main.yml
+++ b/configure/playbooks/roles/xnat/tasks/main.yml
@@ -18,6 +18,10 @@
 - name: "Add or upgrade plugins"
   include: plugins.yml
 
+- name: "Add Container Service images"
+  include: "container_images.yml"
+  when: container_service_enabled
+
 - name: "Add or upgrade pipeline installer"
   include: pipelines.yml
   when: pipeline_engine_enabled
