Fix typo in description of task for mounting efs volume

--- a/configure/playbooks/roles/provision/tasks/mount_efs.yml
+++ b/configure/playbooks/roles/provision/tasks/mount_efs.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure nfs-common is installed (for mounting EFS volume)
+- name: Ensure nfs-utils is installed (for mounting EFS volume)
   ansible.builtin.yum:
     name: nfs-utils
     state: present
