--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -32,6 +32,14 @@ jobs:
         with:
           terraform_version: 1.3.9
 
+
+      # Generate credentials for Terraform
+      - name: Terraform Credentials
+        run: |
+          terraform init
+          terraform apply
+        working-directory: ./credentials
+
       # Initialize a new or existing Terraform working directory by
       # creating initial files, loading any remote state, downloading
       # modules, etc.
