Move looped tasks to separate task file, run everyting in single loop in `main`

--- a/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
+++ b/configure/playbooks/roles/test-multiple_xnat_users/tasks/main.yml
@@ -1,144 +1,8 @@
-# TODO: Refactor code so that all tasks can be run within the same loop
-# i.e. avoid the repeated `loop: ` calls
+---
 # TODO: Collect repeated variables into a single place
 
-- name: "Create XNAT users"
-  ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/investigators/"
-    user: "{{ xnat_service_admin.username }}"
-    password: "{{ xnat_service_admin.password }}"
-    method: POST
-    body_format: json
-    body:
-      title: "{{ 'testuser%02x' | format(item) }}"
-      firstname: "testuser"
-      lastname: "{{ '%02x' | format(item) }}"
-      institution: "Test"
-    validate_certs: "{{ ssl.validate_certs }}"
-    status_code: [200, 409]
-  register: xnat_create_investigator
-  changed_when: xnat_create_investigator.status == 200
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: Ensure the data directory  exists
-  delegate_to: localhost
-  ansible.builtin.file:
-    path: "../../data"
-    state: directory
-    mode: "0755"
-
-- name: "Create project XML file for each user"
-  delegate_to: localhost
-  ansible.builtin.template:
-    src: "ibash_project.xml.j2"
-    dest: "../../data/ibash_project-{{ 'testuser%02x' | format(item) }}.xml"
-    mode: "0600"
-  vars:
-    project_id: "ibash-{{ '%02x' | format(item) }}"
-    project_name: "Test project for {{ 'testuser%02x' | format(item) }}"
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: "Create I-BASH project for each user if it doesn't exist"
-  ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/data/projects/"
-    user: "{{ xnat_service_admin.username }}"
-    password: "{{ xnat_service_admin.password }}"
-    method: POST
-    headers:
-      Content-Type: "application/xml"
-      Accept: "application/xml"
-    body: "{{ lookup('file', '../../data/ibash_project-testuser%02x.xml' | format(item)) }}"
-    validate_certs: "{{ ssl.validate_certs }}"
-    status_code: [200, 409]
-  register: xnat_project_created
-  changed_when: xnat_project_created.status == 200
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: "Create owners for the projects"
-  vars:
-    username: "{{ 'testuser%02x' | format(item) }}"
-    password: "{{ 'carlos1602%02x' | format(item) }}"
-    first_name: "testuser"
-    last_name: "{{ '%02x' | format(item) }}"
-    email: "testuser{{ '%02x' | format(item) }}@ibash.org"
-  ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/xapi/users/"
-    user: "{{ xnat_service_admin.username }}"
-    password: "{{ xnat_service_admin.password }}"
-    method: POST
-    body_format: json
-    body:
-      admin: true
-      username: "{{ username }}"
-      password: "{{ password }}"
-      firstName: "{{ first_name }}"
-      lastName: "{{ last_name }}"
-      email: "{{ email }}"
-      verified: true
-      enabled: true
-    validate_certs: "{{ ssl.validate_certs }}"
-    status_code: [201, 409]
-  register: xnat_create_user
-  changed_when: xnat_create_user.status == 201
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: Make users owners of their projects
-  vars:
-    project_id: "ibash-{{ '%02x' | format(item) }}"
-    username: "{{ 'testuser%02x' | format(item) }}"
-  ansible.builtin.uri:
-    url: "{{ xnat_web_server.url }}/data/projects/{{ project_id }}/users/Owners/{{ username }}"
-    user: "{{ xnat_service_admin.username }}"
-    password: "{{ xnat_service_admin.password }}"
-    method: PUT
-    validate_certs: "{{ ssl.validate_certs }}"
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: Download data and create credentials file for upload
-  delegate_to: localhost
-  block:
-    - name: "Download project data if we do not have a local copy"
-      ansible.builtin.include_tasks: ./roles/setup_xnat_project/tasks/download_data.yml
-
-    - name: "Create credentials file for use by XNATPy"
-      vars:
-        username: "{{ 'testuser%02x' | format(item) }}"
-        password: "{{ 'carlos1602%02x' | format(item) }}"
-        dest: "{{ '../../data/.netrc-testuser%02x' | format(item) }}"
-      ansible.builtin.template:
-        src: ".netrc-testuser.j2"
-        dest: "{{ dest }}"
-        mode: "0600"
-        force: true
-      loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: "Generate ibash-sessions csv for each user"
-  delegate_to: localhost
-  vars:
-    id: "{{ '%02x' | format(item) }}"
-  ansible.builtin.template:
-    src: "ibash-sessions.csv.j2"
-    dest: "{{ '../../data/ibash/ibash-sessions-%02x.csv' | format(item) }}"
-    mode: "0600"
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-
-- name: "Upload data for each user - concurrently"
-  delegate_to: localhost
-  poll: 0
-  async: 10800 # allow up to 3 hours for the data upload
-  vars:
-    metadata: "{{ '../../data/ibash/ibash-sessions-%02x.csv' | format(item) }}"
-    data: ../../data/ibash
-    inventory: ../hosts.yml
-    host: xnat_web
-    netrc: "{{ '../../data/.netrc-testuser%02x' | format(item) }}"
-  ansible.builtin.command:
-    python ../scripts/upload_data.py --metadata {{ metadata }} --data {{ data }} \
-      --inventory {{ inventory }} --host {{ host }} --netrc {{ netrc }}
-  loop: "{{ range(1, n_users + 1, 1) | list }}"
-  register: upload_data
-  changed_when: upload_data.failed != false
-
-- name: "Print upload data results"
-  ansible.builtin.debug:
-    msg: "{{ upload_data.results }}"
+- name: "Set up XNAT users and their projects"
+  ansible.builtin.include_tasks: setup_single_testuser.yml
+  loop: "{{ range(1, n_users + 1) | list }}"
+  loop_control:
+    loop_var: user_id
